[package]
name = "Frolic"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
mysql = "24"
log = "0.4.19"
env_logger = "0.9.0"                               # Add this line
derive_more = "0.99.17"
memcache = "0.17.0"
sha2 = "0.10.7"
hex = "0.4.3"
rust-ini = "0.19.0"
toml = "0.5.2"
serde_derive = "1.0.136"
actix-web-httpauth = "0.8.0"
alcoholic_jwt = "1.0.0"
reqwest = "0.9.22"
deadpool-postgres = { version = "0.10.0-pre", features = ["serde"] }
thiserror = "1.0"
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
uuid = { version = "1", features = ["serde"] }